# kalman_time_series

./: .gitignore  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  pylint.yml  pytest.yml
data/: AAPL_prices.csv  README.md  btc_usd_daily.csv  co2_mauna_loa.csv  france_conso_elec.csv  paris_temperature_daily.csv  sncf_tgv_mensuel.csv  sunspots_monthly.csv  us_unemployment.csv
docs/: kalman_em_theory.tex  numerical_issues.md
examples/: energy_prediction.py  evaluate.py  stock_prediction.py  sunspot_prediction.py  transport_prediction.py
kalman_em/: __init__.py  em.py  kalman_filter.py  model.py
tests/: conftest.py  test_em.py  test_kalman_filter.py  test_model.py  utils.py
