[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kalman-em"
version = "0.2.1"
description = "Kalman filter with EM parameter estimation for time series forecasting"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "MarouaneAEF" }
]
keywords = ["kalman", "em", "time-series", "forecasting", "state-space"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
app = ["streamlit>=1.32", "matplotlib>=3.7", "pandas>=2.0", "statsmodels>=0.14"]
dev = ["pytest", "pylint"]

[project.urls]
Homepage = "https://github.com/MarouaneAEF/kalman_time_series"
Repository = "https://github.com/MarouaneAEF/kalman_time_series"

[tool.setuptools.packages.find]
include = ["kalman_em*"]
